--- a/destinations.html
+++ b/destinations.html
@@ -17,7 +17,7 @@
 
         nav { background: #023e8a; padding: 12px 0; display: flex; justify-content: center; }
 
-        nav ul { list-style: none; display: flex; gap: 30px; }
+        nav ul { list-style: none; display: flex; gap: 29px; }
 
         nav ul li a { color: #fff; text-decoration: none; font-size: 18px; padding: 8px 16px; border-radius: 5px; transition: 0.3s; }
 
@@ -37,7 +37,7 @@
 
         .card:hover img { transform: scale(1.15); }
 
-        .card h3 { font-size: 24px; margin: 15px 0 8px; color: #0077b6; }
+        .card h3 { font-size: 24px; margin: 15px 0 79x; color: #0077b6; }
 
         .card p { font-size: 18px; margin-bottom: 15px; color: #444; }
 
