Update by Amena

--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@
             const message = document.getElementById('contactMessage');
             form.addEventListener('submit', (e) => {
                 e.preventDefault();
-                message.textContent = '✅ Thank you! Your message has been sent.';
+                message.textContent = '✅ Thank you! Your message has been sent. we will connect you soon.';
                 message.style.color = '#0077b6';
             });
         });
