Update by Maruf

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +29,7 @@
             background: linear-gradient(90deg, #0077b6, #00b4d8);
             color: #fff;
             text-align: center;
-            padding: 20px;
+            padding: 21px;
             font-size: 32px;
             font-weight: bold;
             position: sticky;
@@ -38,7 +39,7 @@
 
         nav {
             background: #023e8a;
-            padding: 12px 0;
+            padding: 14px 0;
             display: flex;
             justify-content: center;
         }
@@ -46,7 +47,7 @@
         nav ul {
             list-style: none;
             display: flex;
-            gap: 30px;
+            gap: 32px;
         }
 
         nav ul li a {
@@ -58,7 +59,8 @@
             transition: 0.3s;
         }
 
-        nav ul li a.active, nav ul li a:hover {
+        nav ul li a.active,
+        nav ul li a:hover {
             background: #00b4d8;
         }
 
@@ -108,16 +110,31 @@
         }
 
         @keyframes fadeIn {
-            from {opacity: 0; transform: translateY(30px);} 
-            to {opacity: 1; transform: translateY(0);}
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         @keyframes zoomIn {
-            from {opacity: 0; transform: scale(0.8);} 
-            to {opacity: 1; transform: scale(1);}
+            from {
+                opacity: 0;
+                transform: scale(0.8);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
     </style>
 </head>
+
 <body>
     <header>🌊 Ocean Path Travel</header>
 
@@ -135,10 +152,16 @@
         <img src="pexels-te-lensfix-380994-1371360.jpg" alt="Travel Adventure">
         <div class="about-content">
             <h1>About Ocean Path Travel</h1>
-            <p>Ocean Path Travel is your trusted travel partner, dedicated to making your dream vacations a reality. With years of experience and a passion for exploration, we specialize in curating personalized travel packages for every traveler.</p>
-            <p>Our mission is simple – to provide seamless and memorable travel experiences. Whether you're planning a relaxing beach holiday, an exotic cultural trip, or a thrilling adventure, we are here to make it happen effortlessly.</p>
-            <p>We work with top-rated resorts, airlines, and local guides to ensure quality and comfort in every journey. From affordable deals to luxury escapes, we cater to all travel preferences.</p>
-            <p>Join thousands of happy travelers who trust us for unforgettable journeys across the globe. Your next adventure begins here with Ocean Path Travel – where every path leads to a new horizon.</p>
+            <p>Ocean Path Travel is your trusted travel partner, dedicated to making your dream vacations a reality.
+                With years of experience and a passion for exploration, we specialize in curating personalized travel
+                packages for every traveler.</p>
+            <p>Our mission is simple – to provide seamless and memorable travel experiences. Whether you're planning a
+                relaxing beach holiday, an exotic cultural trip, or a thrilling adventure, we are here to make it happen
+                effortlessly.</p>
+            <p>We work with top-rated resorts, airlines, and local guides to ensure quality and comfort in every
+                journey. From affordable deals to luxury escapes, we cater to all travel preferences.</p>
+            <p>Join thousands of happy travelers who trust us for unforgettable journeys across the globe. Your next
+                adventure begins here with Ocean Path Travel – where every path leads to a new horizon.</p>
         </div>
     </section>
 
@@ -146,4 +169,5 @@
         <p>&copy; 2025 Ocean Path Travel. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
