--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
         <h2>Popular Destinations</h2>
         <div class="cards">
             <div class="card">
-                <img src="pexels-suissounet-1530259.jpg" alt="Paris">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Client-Side-Development--CW2-\Images\pexels-suissounet-1530259.jpg" alt="Paris">
                 <h3>Paris</h3>
                 <p>The romantic city of lights invites you to explore its art, culture, and culinary delights. A must-visit for unforgettable moments.</p>
             </div>
             <div class="card">
-                <img src="pexels-asadphoto-1450363.jpg" alt="Maldives">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-asadphoto-1450363.jpg" alt="Maldives">
                 <h3>Maldives</h3>
                 <p>Immerse yourself in the breathtaking beauty of turquoise waters, sandy beaches, and luxury resorts – a true paradise on Earth.</p>
             </div>
             <div class="card">
-                <img src="pexels-apasaric-2506923.jpg" alt="Tokyo">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-apasaric-2506923.jpg" alt="Tokyo">
                 <h3>Tokyo</h3>
                 <p>Experience the perfect blend of tradition and modernity with stunning cityscapes, ancient temples, and exquisite cuisine.</p>
             </div>
