--- a/destinations.html
+++ b/destinations.html
@@ -66,47 +66,47 @@
         <p class="intro">Explore the most breathtaking destinations around the globe. From romantic getaways to adventurous escapes, Ocean Path Travel brings you the best travel experiences at unbeatable prices.</p>
         <div class="grid">
             <div class="card">
-                <img src="pexels-suissounet-1530259.jpg" alt="Paris">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-suissounet-1530259.jpg" alt="Paris">
                 <h3>Paris</h3>
                 <p>$1000 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-asadphoto-1450363.jpg" alt="Maldives">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-asadphoto-1450363.jpg" alt="Maldives">
                 <h3>Maldives</h3>
                 <p>$1200 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-apasaric-2506923.jpg" alt="Tokyo">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-apasaric-2506923.jpg" alt="Tokyo">
                 <h3>Tokyo</h3>
                 <p>$1300 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-lkloeppel-466685.jpg" alt="New York">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-lkloeppel-466685.jpg" alt="New York">
                 <h3>New York</h3>
                 <p>$2100 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-nextvoyage-1470502.jpg" alt="Dubai">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-nextvoyage-1470502.jpg" alt="Dubai">
                 <h3>Dubai</h3>
                 <p>$1900 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-julius-silver-240301-753639.jpg" alt="Rome">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-julius-silver-240301-753639.jpg" alt="Rome">
                 <h3>Rome</h3>
                 <p>$1800 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-ollivves-931007.jpg" alt="Bali">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-ollivves-931007.jpg" alt="Bali">
                 <h3>Bali</h3>
                 <p>$1700 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-dominikagregus-672532.jpg" alt="London">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-dominikagregus-672532.jpg" alt="London">
                 <h3>London</h3>
                 <p>$1600 per person</p>
             </div>
             <div class="card">
-                <img src="pexels-brettstone-2845013.jpg" alt="Sydney">
+                <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-brettstone-2845013.jpg" alt="Sydney">
                 <h3>Sydney</h3>
                 <p>$1250 per person</p>
             </div>
