--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
     </nav>
 
     <section class="about-section">
-        <img src="pexels-te-lensfix-380994-1371360.jpg" alt="Travel Adventure">
+        <img src="c:\Users\arjun\OneDrive\Documents\Client-Side-Development--CW2-\Images\pexels-te-lensfix-380994-1371360.jpg" alt="Travel Adventure">
         <div class="about-content">
             <h1>About Ocean Path Travel</h1>
             <p>Ocean Path Travel is your trusted travel partner, dedicated to making your dream vacations a reality.
